if(NOT BUILD_PANDA)
  message(FATAL_ERROR "Cannot build pandatool without panda!  Please enable the BUILD_PANDA option.")
endif()

# Include pandatool source directories
add_subdirectory(src/pandatoolbase)
add_subdirectory(src/progbase)
add_subdirectory(src/converter)
add_subdirectory(src/cvscopy)
add_subdirectory(src/eggbase)
add_subdirectory(src/bam)
add_subdirectory(src/flt)
add_subdirectory(src/fltegg)
add_subdirectory(src/fltprogs)
add_subdirectory(src/pstatserver)
add_subdirectory(src/gtk-stats)
