if(NOT BUILD_PANDA)
  message(FATAL_ERROR "Cannot build pandatool without panda!  Please enable the BUILD_PANDA option.")
endif()

# Include pandatool source directories
add_subdirectory(src/assimp)
add_subdirectory(src/bam)
add_subdirectory(src/converter)
add_subdirectory(src/daeegg)
add_subdirectory(src/daeprogs)
add_subdirectory(src/deploy-stub)
add_subdirectory(src/dxf)
add_subdirectory(src/dxfegg)
add_subdirectory(src/dxfprogs)
add_subdirectory(src/eggbase)
add_subdirectory(src/eggcharbase)
add_subdirectory(src/eggprogs)
add_subdirectory(src/egg-mkfont)
add_subdirectory(src/egg-optchar)
add_subdirectory(src/egg-palettize)
add_subdirectory(src/egg-qtess)
add_subdirectory(src/flt)
add_subdirectory(src/fltegg)
add_subdirectory(src/fltprogs)
add_subdirectory(src/gtk-stats)
add_subdirectory(src/imagebase)
add_subdirectory(src/imageprogs)
add_subdirectory(src/lwo)
add_subdirectory(src/lwoegg)
add_subdirectory(src/lwoprogs)
add_subdirectory(src/mac-stats)
add_subdirectory(src/miscprogs)
add_subdirectory(src/objegg)
add_subdirectory(src/objprogs)
add_subdirectory(src/palettizer)
add_subdirectory(src/pandatoolbase)
add_subdirectory(src/pfmprogs)
add_subdirectory(src/progbase)
add_subdirectory(src/pstatserver)
add_subdirectory(src/ptloader)
add_subdirectory(src/text-stats)
add_subdirectory(src/vrml)
add_subdirectory(src/vrmlegg)
add_subdirectory(src/vrmlprogs)
add_subdirectory(src/win-stats)
add_subdirectory(src/xfile)
add_subdirectory(src/xfileegg)
add_subdirectory(src/xfileprogs)

if(BUILD_TOOLS)
  export_targets(Tools)
endif()
export_targets(ToolsDevel NAMESPACE "Panda3D::Tools::" COMPONENT ToolsDevel)
