bin_PROGRAMS = ppremake

ppremake_SOURCES =						\
    find_searchpath.cxx find_searchpath.h			\
    gnu_getopt.c gnu_getopt.h					\
    ppCommandFile.cxx ppCommandFile.h ppDirectoryTree.cxx	\
    ppDirectoryTree.h ppMain.cxx ppMain.h			\
    ppFilenamePattern.cxx					\
    ppFilenamePattern.h ppNamedScopes.cxx ppNamedScopes.h	\
    ppScope.cxx ppScope.h ppSubroutine.cxx ppSubroutine.h	\
    ppremake.cxx ppremake.h tokenize.cxx			\
    tokenize.h

data_DATA = \
    System.pp Depends.pp Template.autoconf.pp \
    Global.stopgap.pp Template.stopgap.pp

EXTRA_DIST =\
    System.pp Depends.pp Template.autoconf.pp \
    Global.stopgap.pp Template.stopgap.pp
