bin_PROGRAMS = ppremake

ppremake_SOURCES =							\
    check_include.cxx check_include.h filename.cxx filename.h		\
    find_searchpath.cxx find_searchpath.h				\
    gnu_getopt.c gnu_getopt.h						\
    ppCommandFile.cxx ppCommandFile.h ppDependableFile.cxx		\
    ppDependableFile.h ppDirectory.cxx					\
    ppDirectory.h ppDirectoryTree.cxx ppDirectoryTree.h			\
    ppMain.cxx ppMain.h							\
    ppFilenamePattern.cxx						\
    ppFilenamePattern.h ppNamedScopes.cxx ppNamedScopes.h		\
    ppScope.cxx ppScope.h ppSubroutine.cxx ppSubroutine.h		\
    ppremake.cxx ppremake.h sedAddress.cxx sedAddress.h sedCommand.cxx	\
    sedCommand.h sedContext.cxx sedContext.h sedProcess.cxx		\
    sedProcess.h sedScript.cxx sedScript.h tokenize.cxx			\
    tokenize.h
