bin_PROGRAMS = ppremake

ppremake_SOURCES =							\
    check_include.cxx check_include.h					\
    dSearchPath.I dSearchPath.cxx dSearchPath.h				\
    executionEnvironment.cxx executionEnvironment.h			\
    filename.I filename.cxx filename.h					\
    globPattern.I globPattern.cxx globPattern.h				\
    gnu_getopt.c gnu_getopt.h gnu_regex.c gnu_regex.h			\
    md5.c md5.h                                                         \
    ppCommandFile.cxx ppCommandFile.h ppDependableFile.cxx		\
    ppDependableFile.h ppDirectory.cxx					\
    ppDirectory.h ppDirectoryTree.cxx ppDirectoryTree.h			\
    ppMain.cxx ppMain.h							\
    ppFilenamePattern.cxx						\
    ppFilenamePattern.h ppNamedScopes.cxx ppNamedScopes.h		\
    ppScope.cxx ppScope.h ppSubroutine.cxx ppSubroutine.h		\
    ppremake.cxx ppremake.h sedAddress.cxx sedAddress.h sedCommand.cxx	\
    sedCommand.h sedContext.cxx sedContext.h sedProcess.cxx		\
    sedProcess.h sedScript.cxx sedScript.h tokenize.cxx			\
    tokenize.h vector_string.h

# Extra files for VC++ project description
EXTRA_DIST =							\
    ppremake.sln ppremake.vcproj ppremake.vsdir ppremake.vsz